# retail-kiosk

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  TODO.md  docker-compose.yml  validate_docker_compose.py
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .ruff.toml  Dockerfile  README.md  __init__.py  alembic.ini  install_and_verify.bat  install_and_verify.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  verify_installation.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/dependencies/: __init__.py  database.py
backend/app/models/: __init__.py  analytics.py  base.py  list.py  product.py  session.py
backend/app/routes/: __init__.py  admin.py  analytics.py  categories.py  lists.py  products.py  search.py
backend/app/schemas/: __init__.py  analytics.py  category.py  list.py  product.py  search.py  session.py
backend/app/services/: __init__.py  analytics_service.py  category_service.py  embedding_service.py  list_service.py  product_service.py  qdrant_service.py  search_service.py  session_service.py
backend/app/worker/: celery_app.py  tasks.py
backend/data/: products.json
backend/scripts/: seed_data.py
backend/tests/: __init__.py  conftest.py  factories.py
backend/tests/integration/: test_vector_search.py
backend/tests/routes/: __init__.py  test_categories.py  test_lists.py  test_products.py
backend/tests/services/: test_category_service.py  test_embedding_service.py  test_list_service.py  test_product_service.py  test_qdrant_service.py  test_search_service.py
backend/tests/worker/: __init__.py  test_tasks.py
doc/: PRD.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md
docs/plans/: 2026-01-20-frontend-core-design.md  2026-01-20-frontend-core-implementation.md  2026-01-20-qr-ui-polish-design.md  2026-01-20-qr-ui-polish-implementation.md  2026-01-20-testing-design.md  2026-01-20-testing-implementation.md  2026-01-20-vector-search-design.md  2026-01-20-vector-search-implementation.md
frontend/: .dockerignore  .env.example  .eslintrc.json  .prettierrc  Dockerfile  README.md  index.html  install_and_verify.bat  install_and_verify.sh  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  verify_installation.js  vite.config.ts
frontend/e2e/: home.spec.ts  list.spec.ts  search.spec.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: index.ts
frontend/src/components/category/: CategoryCard.tsx  CategoryGrid.tsx  index.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx  index.ts
frontend/src/components/list/: index.ts  (+3 more)
frontend/src/hooks/: index.ts  useDebounce.ts
frontend/src/pages/: CategoryPage.tsx  HomePage.tsx  ListPage.tsx  SearchResultsPage.tsx  SyncPage.tsx  index.ts
frontend/src/services/: api.ts  categoryService.ts  index.ts  listService.ts  productService.ts  searchService.ts
frontend/src/store/: index.ts  listStore.ts  searchStore.ts  sessionStore.ts
frontend/src/test/: setup.test.ts  setup.ts
frontend/src/types/: index.ts
worker/: .dockerignore  .env.example  Dockerfile  __init__.py  celery_app.py  config.py  requirements.txt  tasks.py
(+25 files in other folders)
